fixed contrast errors

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
-$primary-color: #055499;
+$primary-color: #1d4289;
 html {
   font-size: 62.5%;
   font-family: "Roboto", sans-serif;
@@ -85,7 +85,7 @@ html {
       position: absolute;
       top: 24rem;
       left: 1em;
-      background-color: #baaeae1e;
+      background-color: #fff9f91e;
       padding: 2rem;
       border-radius: 0.6rem;
       color: $primary-color;
